# singe

./: .clang-format  .gitignore  .gitmodules  .mk  CMakeLists.txt  DEVLOG.md  Makefile  README.md  Scene.md  bintoc.py  build  goals.md  main  main.cpp  makefile  nodes.md  run  uml.uxf  vbo.hpp
.github/workflows/: ci.yml
benchmarking/: CMakeLists.txt  Game.cpp  Game.hpp  main.cpp
cmake/: ProjectConfig.cmake  config.h.in
demo/: CMakeLists.txt  Game.cpp  Game.hpp  main.cpp
demo/res/shader/: debug.frag  geom.frag  geom.vert  lighting.frag  lighting.vert  mono.fs  tex.fs
docs/: CMakeLists.txt
examples/: CMakeLists.txt
examples/demo/: CMakeLists.txt  Game.cpp  Game.hpp  main.cpp
examples/geometry/: CMakeLists.txt  Game.cpp  Game.hpp  GeometryBuffer.cpp  main.cpp
examples/instanced/: CMakeLists.txt  Game.cpp  Game.hpp  InstanceVBO.cpp  InstanceVBO.hpp  main.cpp
examples/noise_benchmark/: CMakeLists.txt  main.cpp
examples/outline/: CMakeLists.txt  Game.cpp  Game.hpp  main.cpp
examples/physics/: CMakeLists.txt  Game.cpp  Game.hpp  main.cpp
examples/res/: scene.xml
examples/res/model/: Human.mtl  cube_plane.mtl  fountain.mtl  ground.mtl  hall.mtl  pillar.mtl  plane.mtl  simple.mtl  sphere.mtl  suzzan.mtl  untitled_light.dae  untitled_light2.dae
examples/res/scene/: scene_demo.xml
examples/res/shader/: default.frag  default.vert  gamma.glsl  geom copy.frag  grid.vert  instance.frag  instance.vert  (+4 more)
examples/reverse_projection/: CMakeLists.txt  Diamond.hpp  Game.cpp  Game.hpp  main.cpp
examples/scene/: CMakeLists.txt  Game.cpp  Game.hpp  main.cpp
examples/scenes/: CMakeLists.txt  Game.cpp  Game.hpp  main.cpp
examples/shrine/: CMakeLists.txt  Game.cpp  Game.hpp  main.cpp
examples/spin_cube/: CMakeLists.txt  Game.cpp  Game.hpp  main.cpp
examples/stencil/: CMakeLists.txt  Game.cpp  Game.hpp  main.cpp
examples/voxel/: CMakeLists.txt  Game.cpp  Game.hpp  Voxel.cpp  Voxel.hpp  main.cpp
include/: s3e.hpp
include/s3e/: Camera.hpp  Core.hpp  FPSDisplay.hpp  FrameBuffer.hpp  GameBase.hpp  Graphics.hpp  Keymap.hpp  Material.hpp  Menu.hpp  Model.hpp  Physics.hpp  ResourceManager.hpp  Shader.hpp  Support.hpp  Texture.hpp  Util.hpp  VBO.hpp  Voxel.hpp  log.hpp
include/singe/: Core.hpp  Graphics.hpp  Support.hpp
includes/: Camera.hpp  Menu.hpp  Model.hpp  ResourceManager.hpp  VBO.hpp  s3e.hpp
includes/s3e/: Camera.hpp  GameBase.hpp  Material.hpp  Menu.hpp  Model.hpp  ResourceManager.hpp  Shader.hpp  Util.hpp  VBO.hpp
physicsdemo/: CMakeLists.txt  Game.cpp  Game.hpp
res/shader/: color.fs  color.vs  color_texture.fs  color_texture.vs  default.vs  lighting.fs  lighting.vs  mono.fs  mono.vs  obj.fs  obj.vs  tex.vs
src/: CMakeLists.txt  Camera.cpp  FPSDisplay.cpp  FrameBuffer.cpp  Game.cpp  GameBase.cpp  Keymap.cpp  Material.cpp  Menu.cpp  Model.cpp  Physics.cpp  ResourceManager.cpp  Shader.cpp  Texture.cpp  Util.cpp  VBO.cpp  Voxel.cpp  main.cpp
src/Core/: CMakeLists.txt  Camera.cpp  FPSDisplay.cpp  FrameBuffer.cpp  GameBase.cpp  Geometry.cpp  Grid.cpp  Material.cpp  Menu.cpp  Mesh.cpp  Model.cpp  ModelLoader.cpp  Physics.cpp  RenderState.cpp  ResourceManager.cpp  Scene.cpp  Shader.cpp  Texture.cpp  VBO.cpp  Voxel.cpp
src/Graphics/: CMakeLists.txt  FrameBuffer.cpp  Material.cpp  Menu.cpp  Model.cpp  RenderState.cpp  Shader.cpp  Texture.cpp  VBO.cpp  Voxel.cpp
src/Support/: CMakeLists.txt  Keymap.cpp  Parser.cpp  Transform3d.cpp  Util.cpp  log.cpp
src/Transform3d/: CMakeLists.txt
src/Transform3d/include/: Transform3d.hpp
src/Transform3d/src/: Transform3d.cpp
src/UI/: CMakeLists.txt  FPSDisplay.cpp  Menu.cpp
src/Wavefront/: CMakeLists.txt
src/Wavefront/include/: Wavefront.hpp
src/Wavefront/src/: Wavefront.cpp
src/includes/: Camera.hpp  Game.hpp  Material.hpp  Menu.hpp  Model.hpp  Shader.hpp  Util.hpp  VBO.hpp
src/singe-core/: CMakeLists.txt
src/singe-core/include/: default_font.h
src/singe-core/include/singe/Core/: Camera.hpp  FPSDisplay.hpp  GameBase.hpp  Menu.hpp  RenderState.hpp  ResourceManager.hpp  Window.hpp
src/singe-core/src/: Camera.cpp  FPSDisplay.cpp  GameBase.cpp  Menu.cpp  RenderState.cpp  ResourceManager.cpp  Window.cpp
src/singe-graphics/: CMakeLists.txt
src/singe-graphics/include/singe/Graphics/: Geometry.hpp  Grid.hpp  Material.hpp  Mesh.hpp  Model.hpp  RenderState.hpp  ResourceManager.hpp  Scene.hpp  Shader.hpp  UniformExtra.hpp
src/singe-graphics/src/: Geometry.cpp  Grid.cpp  Material.cpp  Mesh.cpp  Model.cpp  RenderState.cpp  ResourceManager.cpp  Scene.cpp  Shader.cpp  UniformExtra.cpp
src/singe-graphics_old/include/singe/Graphics/: Geometry.hpp  Grid.hpp  Material.hpp  Mesh.hpp  Model.hpp  RenderState.hpp  ResourceManager.hpp
src/singe-graphics_old/src/: Geometry.cpp  Grid.cpp  Material.cpp  Mesh.cpp  Model.cpp  RenderState.cpp
src/singe-resource/: CMakeLists.txt
src/singe-resource/include/singe/Resource/: ResourceManager.hpp
src/singe-resource/src/: ResourceManager.cpp
src/singe-support/: CMakeLists.txt
src/singe-support/include/singe/Support/: Parser.hpp  SceneParser.hpp  Util.hpp  log.hpp
src/singe-support/src/: Parser.cpp  SceneParser.cpp  Util.cpp
tests/: CMakeLists.txt  test.h  test_RenderState.cpp  test_framebuffer.cpp  test_graphics_framebuffer.cpp  test_graphics_shader.cpp  test_graphics_texture.cpp  test_graphics_vbo.cpp  test_graphics_vbo_vertex.cpp  test_shader.cpp  test_support_parser.cpp  test_support_transform3d.cpp  test_support_util.cpp  test_test.cpp  test_texture.cpp  test_vbo.cpp  test_vbo_vertex.cpp
voxeldemo/: CMakeLists.txt  Game.cpp  Game.hpp  main.cpp
workspace/: CMakeLists.txt  Collision.cpp  Collision.hpp  Diamond.hpp  FastScene.cpp  FastScene.hpp  Game.cpp  Game.hpp  GeometryBuffer.cpp  GeometryBuffer.hpp  Grid.cpp  Grid.hpp  Markers.hpp  Material.hpp  Node.hpp  Physics.cpp  Physics.hpp  Scene.cpp  Scene.hpp  SceneParse.cpp  SceneParse.hpp  main.cpp
workspace/res/: main.xml  new_scene.xml  scene.dtd  scene.xml  scene.xsd  scene_demo.xml
workspace/res/model/: cube.mtl  cube_plane.mtl  untitled.dae
workspace/res/shader/: shader.frag  shader.vert
(+51 files in other folders)
